feat: flatten sidebar navigation + add address copy button pattern
UI Improvements:
- Sidebar mode now shows entity items directly with real icons (no collapsible groups)
- Drawer mode retains collapsible sections for space efficiency
- Added 'Same as Billing' button to Service Address form section

New Components:
- FieldGroupAction model for generic group actions
- CopyFieldsButton atom for compact action buttons
- FormSection.trailing prop for section header actions

Form Enhancements:
- GenericForm renders actions when group.copyFrom is configured
- Field value copying between groups by suffix matching (billing_city -> service_city)

Test Fixes:
- Updated adaptive_shell_test for multiple 'Dashboard' texts
- Fixed filterable_data_table_test debounce timing

Other:
- Removed redundant viewport meta tag from web/index.html
- Removed unused saved views code from data_table.dart

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -134,10 +134,7 @@
         document.body.style.background = "transparent";
       }
     </script>
-    <meta
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-      name="viewport"
-    />
+    <!-- Note: Flutter Web manages its own viewport meta tag for optimal compatibility -->
   </head>
   <body>
     <picture id="splash">
